<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">HikkyAlarm</string>
    <string name="action_settings">Settings</string>
    <string name="alarm_set_txt">アラームをセットする時間を入力</string>
    <string name="snooze_edit_text_hint">数字を入力</string>
    <string name="snooze_minute_txt">分後にスヌーズを設定</string>
    <string name="set_btn_txt">セット</string>
    <string name="cancel_btn_txt">キャンセル</string>
    <string name="notification_txt">起きてください！！</string>
    <string name="notification_btn">アラームを止める</string>
    <string name="notification_lat">現在地の緯度：</string>
    <string name="notification_long">現在地の経度：</string>
    <string name="notification_lat_wu">起きた時の緯度：</string>
    <string name="notification_long_wu">起きた時の経度：</string>
    <string name="notification_between">起きた時との距離：</string>
</resources>
