<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="jp.ac.titech.itpro.sdl.yuseipen.hikkyalarm.MainActivity" >

	<TextView 
	    android:id="@+id/alarm_set_text"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/alarm_set_txt" />
	        
	<TimePicker
        android:id="@+id/alarm_picker"
        android:layout_height="wrap_content"
        android:layout_width="match_parent" />
	
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal">
	    
	    <EditText
        	android:id="@+id/snooze_edit_text"
        	android:layout_height="wrap_content"
        	android:layout_width="wrap_content"
        	android:hint="@string/snooze_edit_text_hint"
        	android:maxLength="4"
        	android:inputType="number" />
	    
	    <TextView 
	        android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/snooze_minute_txt" />
	    
	</LinearLayout>
    
	<Button 
        android:id="@+id/set_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/set_btn_txt" />

    <Button 
        android:id="@+id/cancel_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cancel_btn_txt" />

</LinearLayout>
